src/test/ui/range/range-inclusive-pattern-precedence.stderr
error: the range pattern here has ambiguous interpretation
  --> $DIR/range-inclusive-pattern-precedence.rs:14:10
   |
LL |         &10..=15 => {}
   |          ^^^^^^^ help: add parentheses to clarify the precedence: `(10 ..=15)`

warning: `...` range patterns are deprecated
  --> $DIR/range-inclusive-pattern-precedence.rs:11:9
   |
LL |         &0...9 => {}
   |         ^^^^^^ help: use `..=` for an inclusive range: `&(0..=9)`
   |
note: the lint level is defined here
  --> $DIR/range-inclusive-pattern-precedence.rs:7:9
   |
LL | #![warn(ellipsis_inclusive_range_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

